--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "PythonX HERE.",
-    "logo": "https://te.legra.ph/file/07d39b85c6cea32f15259.jpg",
+    "name": "HITLER HERE.",
+    "logo": "https://te.legra.ph/file/9c3991027a851d484b75c.jpg",
     "keywords": [
         "telegram",
         "telethon",
@@ -8,7 +8,7 @@
         "PythonX",
         "SpamBots"
     ],
-    "repository": "https://github.com/ItZxSTaR/TheBotSpam",
+    "repository": "https://github.com/mysteriousxhitler/TheBotSpam",
     "env": {
      "CMD_HNDLR": {
             "description": "Custom command handler.",
